Issue #16592: stringlib_bytes_join doesn't raise MemoryError on allocation failure